# LLM-Testing

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CURRENT-PLAN.md  CURRENT-STATE.md  HISTORY.md  benchmark-checkpoint.json
config/: .env.example  claude-code.example.env.example  models.yaml  open-code.example.env.example
docs/: phase3-benchmark-report.md  phase3-data.json  phase3-report.html
results/: tier1-fizzbuzz_claude-code_devstral_2026-04-07T07-27-12.323591+00-00.json  tier1-fizzbuzz_claude-code_devstral_2026-04-07T10-07-24.380170+00-00.json  tier1-fizzbuzz_claude-code_gemma-4-27b_2026-04-07T07-26-33.789267+00-00.json  tier1-fizzbuzz_claude-code_gemma-4-27b_2026-04-07T10-06-55.690288+00-00.json  tier1-fizzbuzz_claude-code_gemma-4-31b_2026-04-07T07-26-16.865698+00-00.json  tier1-fizzbuzz_claude-code_gemma-4-31b_2026-04-07T08-07-41.868760+00-00.json  tier1-fizzbuzz_claude-code_glm-4.5-air-free_2026-04-07T07-30-39.918075+00-00.json  tier1-fizzbuzz_claude-code_glm-4.5-air-free_2026-04-07T12-34-08.759298+00-00.json  tier1-fizzbuzz_claude-code_glm-4.7-flash_2026-04-07T07-30-51.306303+00-00.json  tier1-fizzbuzz_claude-code_glm-4.7-flash_2026-04-07T14-06-38.789279+00-00.json  tier1-fizzbuzz_claude-code_glm-5_2026-04-07T07-29-20.474599+00-00.json  tier1-fizzbuzz_claude-code_glm-5_2026-04-07T12-07-08.688900+00-00.json  tier1-fizzbuzz_claude-code_gpt-oss-120b_2026-04-07T07-28-04.861302+00-00.json  tier1-fizzbuzz_claude-code_gpt-oss-120b_2026-04-07T10-31-31.895329+00-00.json  tier1-fizzbuzz_claude-code_gpt-oss-20b_2026-04-07T07-28-44.613204+00-00.json  (+1592 more)
(+1196 files in other folders)
