[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-bench"
version = "0.1.0"
description = "Automated LLM coding benchmark harness"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
usd = ["usd-core>=25.5"]
compile = [
    "dspy>=2.6",
    "pydantic>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]
all = [
    "llm-bench[usd,dev,compile]",
]

[project.scripts]
llm-bench = "llm_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
